--- a/index.html
+++ b/index.html
@@ -111,9 +111,38 @@
               <b>Como são os nossos Serviços</b>
             </h1>
           </div>
-          <div class="col-4"></div>
-          <div class="col-4"></div>
-          <div class="col-4"></div>
+          <div class="col-4 mb-5">
+            <div class="card-icon text-center">
+              <img src="img/icone-pedido.svg" width="150px" alt="" />
+            </div>
+            <div class="card-text text-center mt-3">
+              <p><b>Fácil de pedir</b></p>
+              <span
+                >Você só precisa de alguns passos para pedir sua comida</span
+              >
+            </div>
+          </div>
+          <div class="col-4 mb-5">
+            <div class="card-icon text-center">
+              <img src="img/icone-delivery.svg" width="250px" alt="" />
+            </div>
+            <div class="card-text text-center mt-3">
+              <p><b>Entrega rápida</b></p>
+              <span>Nossa entrega é sempre pontual, rápida e segura</span>
+            </div>
+          </div>
+          <div class="col-4 mb-5">
+            <div class="card-icon text-center">
+              <img src="img/icone-qualidade.svg" width="250px" alt="" />
+            </div>
+            <div class="card-text text-center mt-3">
+              <p><b>Melhor qualidade</b></p>
+              <span
+                >Não só a rapidez na entrega, a qualidade também é nosso
+                forte</span
+              >
+            </div>
+          </div>
         </div>
       </div>
     </section>
