--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     </section>
     <!-- 3° -->
     <section class="servicos" id="servico">
+      <div class="background-servicos"></div>
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-5">
@@ -128,7 +129,10 @@
             </div>
             <div class="card-text text-center mt-3">
               <p><b>Entrega rápida</b></p>
-              <span>Nossa entrega é sempre pontual, rápida e segura</span>
+              <span
+                >Nossa entrega é sempre pontual,<br />
+                rápida e segura</span
+              >
             </div>
           </div>
           <div class="col-4 mb-5">
@@ -138,8 +142,8 @@
             <div class="card-text text-center mt-3">
               <p><b>Melhor qualidade</b></p>
               <span
-                >Não só a rapidez na entrega, a qualidade também é nosso
-                forte</span
+                >Não só a rapidez na entrega, a <br />
+                qualidade também é nosso forte</span
               >
             </div>
           </div>
@@ -147,7 +151,67 @@
       </div>
     </section>
     <!-- 4° -->
-    <section class="cardapio" id="cardapio"></section>
+    <section class="cardapio" id="cardapio">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center mb-5">
+            <span class="hint-title"><b>Cardápio</b></span>
+            <h1 class="title">
+              <b>Conheça o nosso cardápio</b>
+            </h1>
+          </div>
+          <div class="col-12 container-menu">
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-hamburger"></i>&nbsp; Burgers
+            </a>
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
+            </a>
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
+            </a>
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-bacon"></i>&nbsp; Steaks
+            </a>
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-cocktail"></i>&nbsp; Bebidas
+            </a>
+            <a href="#" class="btn-white btn-sm mr-3">
+              <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
+            </a>
+          </div>
+
+          <div class="col-12">
+            <div class="row" id="itensCardapio">
+              <div class="col-3">
+                <div class="card card-item">
+                  <div class="img-produto">
+                    <img
+                      src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                      alt=""
+                    />
+                  </div>
+                  <p class="title-produto text-center mt-4">
+                    <b>Nome</b>
+                  </p>
+                  <p class="price-produto text-center">
+                    <b>R$ 140,90</b>
+                  </p>
+                  <div class="add-carrinho">
+                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                    <span class="add-numero-itens">0</span>
+                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                    <span class="btn btn-add"
+                      ><i class="fas fa-shopping-bag"></i
+                    ></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- 5° -->
     <section class="depoimentos" id="depoimentos"></section>
     <section class="reserva" id="reserva"></section>
