--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     </section>
     <!-- 4° -->
     <section class="cardapio" id="cardapio">
+      <div class="background-cardapio"></div>
       <div class="container">
         <div class="row">
           <div class="col-12 text-center mb-5">
@@ -183,7 +184,7 @@
 
           <div class="col-12">
             <div class="row" id="itensCardapio">
-              <div class="col-3">
+              <div class="col-3 mb-5">
                 <div class="card card-item">
                   <div class="img-produto">
                     <img
@@ -209,13 +210,172 @@
               </div>
             </div>
           </div>
+          <div class="col-12 text-center">
+            <a href="#" class="btn btn-white btn-sm"> Ver mais </a>
+          </div>
         </div>
       </div>
     </section>
     <!-- 5° -->
-    <section class="depoimentos" id="depoimentos"></section>
-    <section class="reserva" id="reserva"></section>
-    <footer></footer>
+    <section class="depoimentos" id="depoimentos">
+      <div class="background-depoimentos"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-5 text-center">
+            <div class="card-depoimentos"></div>
+            <div class="d-flex img-banner">
+              <img src="img/pizzas.png " alt="Pizzas" />
+            </div>
+          </div>
+          <div class="col-7">
+            <span class="hint-title"><b>Depoimentos</b></span>
+            <h1 class="title">
+              <b>O que dizem sobre nós?</b>
+            </h1>
+            <div class="mb-5">
+              <div class="depoimento" id="depoimento-1">
+                <div class="container-dados-depoimento">
+                  <div class="imagem-depoimento"></div>
+                  <div>
+                    <p class="nome-depoimento"><b>Diego Pereira</b></p>
+                    <p class="nota-depoimento">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star-half-alt"></i>&nbsp;
+                      <span>4.5</span>
+                    </p>
+                  </div>
+                </div>
+                <p class="texto-depoimento">
+                  <i class="fas fa-quote-left"></i>
+                  <span>
+                    Muito bom, recomendo demais comida muito bem feita pelo
+                    chefe, atendimento dentro dos parâmetros e boa comunicação
+                    com o cliente
+                  </span>
+                  <i class="fas fa-quote-right"></i>
+                </p>
+              </div>
+              <!-- ----------- -->
+              <div class="depoimento hidden" id="depoimento-2">
+                <div class="container-dados-depoimento">
+                  <div class="imagem-depoimento"></div>
+                  <div>
+                    <p class="nome-depoimento"><b>Ana Beatriz</b></p>
+                    <p class="nota-depoimento">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>&nbsp;
+                      <span>5.0</span>
+                    </p>
+                  </div>
+                </div>
+                <p class="texto-depoimento">
+                  <i class="fas fa-quote-left"></i>
+                  <span>
+                    Um jantar perfeito do começo ao fim.Comida, experiencia
+                    serviço... Foi tão maravilhoso que fomos dois dias seguidos,
+                    fato inedito para mim em uma viagem.
+                  </span>
+                  <i class="fas fa-quote-right"></i>
+                </p>
+              </div>
+              <!-- ---------- -->
+              <div class="depoimento hidden" id="depoimento-3">
+                <div class="container-dados-depoimento">
+                  <div class="imagem-depoimento"></div>
+                  <div>
+                    <p class="nome-depoimento"><b>João Guilerme</b></p>
+                    <p class="nota-depoimento">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="far fa-star"></i>&nbsp;
+                      <span>4.0</span>
+                    </p>
+                  </div>
+                </div>
+                <p class="texto-depoimento">
+                  <i class="fas fa-quote-left"></i>
+                  <span>
+                    A comida estava excelente é o serviço gentil nos surpreendeu
+                    dica: reserve umas 3 horas para ter uma experincia incrivel.
+                  </span>
+                  <i class="fas fa-quote-right"></i>
+                </p>
+              </div>
+            </div>
+            <a href="#" class="btn btn-sm btn-white btn-social mr-3">1</a>
+            <a href="#" class="btn btn-sm btn-white btn-social mr-3">2</a>
+            <a href="#" class="btn btn-sm btn-white btn-social">3</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 6° -->
+    <section class="reserva" id="reserva">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="card-secondary">
+              <div class="row">
+                <div class="col-7">
+                  <span class="hint-title"><b>Reserva</b></span>
+                  <h1 class="title">
+                    <b
+                      >Quer reserva um <br />
+                      horário?</b
+                    >
+                  </h1>
+                  <p class="pt-5">
+                    Mande uma mensagem clicando no botão abaixo
+                    <br />
+                    Reserve sua data e horário de forma simples e rápida.
+                  </p>
+                  <a href="#" class="btn btn-yellow mt-4"> Fazer reserva</a>
+                </div>
+                <div class="col-5">
+                  <div class="card-reserva"></div>
+                  <div class="d-flex img-banner">
+                    <img src="img/icone-reserva.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-3 container-logo-footer">
+            <img src="img/logo.png" class="logo-footer" />
+          </div>
+          <div class="col-6 container-texto-footer">
+            <p class="mb-0">
+              <b>Menu On-line</b> &copy; Todos direitos reservados
+            </p>
+          </div>
+          <div class="col-3 container-redes-footer">
+            <a href="#" class="btn btn-sm btn-white btn-social mr-3">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#" class="btn btn-sm btn-white btn-social mr-3">
+              <i class="fab fa-facebook"></i>
+              <a href="#" class="btn btn-sm btn-white btn-social">
+                <i class="fab fa-whatsapp"></i>
+              </a>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/modernizr-3.5.0.min.js"></script>
