--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       </div>
     </footer>
 
-    <div class="modal-full" id="modal-carrinho">
+    <div class="modal-full hidden" id="modal-carrinho">
       <div class="modal-header">
         <div class="container">
           <a href="#" class="btn btn-white btn-sm float-right">Fechar</a href="#">
