--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/fontawesome.css" />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Cardápio Online</title>
   </head>
@@ -13,7 +14,7 @@
     <section class="header">
       <div class="container">
         <nav class="navbar navbar-expand-lg pr-0">
-          <a href="#" class="navbar-brand">
+          <a class="navbar-brand">
             <img src="img/logo.png" width="160" class="img-logo" alt="" />
           </a>
           <button
@@ -65,7 +66,7 @@
                 casa de forma rápida e segura.
               </p>
               <div>
-                <a href="#" class="btn btn-yellow mt-4 mr-3"> Ver cardápio </a>
+                <a class="btn btn-yellow mt-4 mr-3"> Ver cardápio </a>
                 <a href="#" class="btn btn-white btn-icon-left mt-4">
                   <span class="icon-left">
                     <i class="fa fa-phone"></i>
@@ -162,56 +163,61 @@
             </h1>
           </div>
           <div class="col-12 container-menu">
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-burgers"
+              class="btn-white active btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('burgers')"
+            >
               <i class="fas fa-hamburger"></i>&nbsp; Burgers
             </a>
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-pizzas"
+              class="btn-white btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('pizzas')"
+            >
               <i class="fas fa-pizza-slice"></i>&nbsp; Pizzas
             </a>
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-churrasco"
+              class="btn-white btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('churrasco')"
+            >
               <i class="fas fa-drumstick-bite"></i>&nbsp; Churrasco
             </a>
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-steaks"
+              class="btn-white btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('steaks')"
+            >
               <i class="fas fa-bacon"></i>&nbsp; Steaks
             </a>
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-bebidas"
+              class="btn-white btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('bebidas')"
+            >
               <i class="fas fa-cocktail"></i>&nbsp; Bebidas
             </a>
-            <a href="#" class="btn-white btn-sm mr-3">
+            <a
+              id="menu-sobremesas"
+              class="btn-white btn-sm mr-3"
+              onclick="cardapio.metodos.obterItemsCadapio('sobremesas')"
+            >
               <i class="fas fa-ice-cream"></i>&nbsp; Sobremesas
             </a>
           </div>
 
           <div class="col-12">
-            <div class="row" id="itensCardapio">
-              <div class="col-3 mb-5">
-                <div class="card card-item">
-                  <div class="img-produto">
-                    <img
-                      src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
-                      alt=""
-                    />
-                  </div>
-                  <p class="title-produto text-center mt-4">
-                    <b>Nome</b>
-                  </p>
-                  <p class="price-produto text-center">
-                    <b>R$ 140,90</b>
-                  </p>
-                  <div class="add-carrinho">
-                    <span class="btn-menos"><i class="fas fa-minus"></i></span>
-                    <span class="add-numero-itens">0</span>
-                    <span class="btn-mais"><i class="fas fa-plus"></i></span>
-                    <span class="btn btn-add"
-                      ><i class="fas fa-shopping-bag"></i
-                    ></span>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="row" id="itensCardapio"></div>
           </div>
           <div class="col-12 text-center">
-            <a href="#" class="btn btn-white btn-sm"> Ver mais </a>
+            <a
+              id="btnVerMais"
+              class="btn btn-white btn-sm"
+              onclick="cardapio.metodos.verMais()"
+            >
+              Ver mais
+            </a>
           </div>
         </div>
       </div>
@@ -380,77 +386,81 @@
     <div class="modal-full hidden" id="modal-carrinho">
       <div class="modal-header">
         <div class="container">
-          <a href="#" class="btn btn-white btn-sm float-right">Fechar</a href="#">
-            <div class="etapas">
-              <div class="etapa etapa1 ">1</div>
-              <div class="etapa etapa2 ">2</div>
-              <div class="etapa etapa3 ">3</div>
-
-            </div>
-            <p class="title-carrinho mt-4">
-              <b id="ldlTituloEtapa">Seu carrinho</b>
-            </p>
+          <a href="#" class="btn btn-white btn-sm float-right">Fechar</a>
+          <div class="etapas">
+            <div class="etapa etapa1">1</div>
+            <div class="etapa etapa2">2</div>
+            <div class="etapa etapa3">3</div>
+          </div>
+          <p class="title-carrinho mt-4">
+            <b id="ldlTituloEtapa">Seu carrinho</b>
+          </p>
         </div>
       </div>
       <div class="modal-body">
         <div class="container">
-          <div id="items-carrinho " class="row mr-0 ml-0 ">
+          <div id="items-carrinho " class="row mr-0 ml-0">
             <div class="col-12 item-carrinho">
               <div class="img-produto">
-                <img src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
+                <img
+                  src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                  alt=""
+                />
               </div>
               <div class="dados-produto">
-                <p class="title-produto"></p><b>Nome do produto</b></p>
-                <p class="price-produto"></p><b>R$ 154,90</b></p>
+                <p class="title-produto"></p>
+                <b>Nome do produto</b>
+                <p class="price-produto"></p>
+                <b>R$ 154,90</b>
               </div>
               <div class="add-carrinho">
                 <span class="btn-menos"><i class="fas fa-minus"></i></span>
                 <span class="add-numero-itens">0</span>
                 <span class="btn-mais"><i class="fa fa-plus"></i></span>
-                <span class="btn btn-remove"
-                  ><i class="fas fa-times"></i></span>
+                <span class="btn btn-remove"><i class="fas fa-times"></i></span>
               </div>
             </div>
-
           </div>
           <div id="local-entrega" class="row mr-0 ml-0 hidden">
             <div class="col-4">
               <div class="form-group container-cep">
                 <label for="">CEP:</label>
-                <input id="txtCEP" type="text" class="form-control">
-                <a href="#" class="btn btn-yellow btn sm"><i class="fa fa-search"></i></a>
+                <input id="txtCEP" type="text" class="form-control" />
+                <a href="#" class="btn btn-yellow btn sm"
+                  ><i class="fa fa-search"></i
+                ></a>
               </div>
             </div>
             <div class="col-8"></div>
             <div class="col-6">
               <div class="form-group">
                 <label for="">Endereço:</label>
-                <input id="txtEndereco" type="text" class="form-control">
+                <input id="txtEndereco" type="text" class="form-control" />
               </div>
             </div>
             <div class="col-4">
               <div class="form-group">
                 <label for="">Bairro:</label>
-                <input id="txtBairro" type="text" class="form-control">
+                <input id="txtBairro" type="text" class="form-control" />
               </div>
             </div>
             <div class="col-2">
               <div class="form-group">
                 <label for="">Número:</label>
-                <input id="txtNumero" type="text" class="form-control">
+                <input id="txtNumero" type="text" class="form-control" />
               </div>
             </div>
 
             <div class="col-6">
               <div class="form-group">
                 <label for="">Cidade:</label>
-                <input id="txtCidade" type="text" class="form-control">
+                <input id="txtCidade" type="text" class="form-control" />
               </div>
             </div>
             <div class="col-4">
               <div class="form-group">
                 <label for="">Complemento:</label>
-                <input id="txtComplemento" type="text" class="form-control">
+                <input id="txtComplemento" type="text" class="form-control" />
               </div>
             </div>
             <div class="col-2">
@@ -488,12 +498,8 @@
                 </select>
               </div>
             </div>
-
-
-
-
           </div>
-          <div id="resumo-carrinho" class="row mr-0 ml-0 hidden ">
+          <div id="resumo-carrinho" class="row mr-0 ml-0 hidden">
             <div class="col-12">
               <p class="title-carrinho mt-4">
                 <b>Itens do pedido</b>
@@ -503,7 +509,10 @@
               <div class="row" id="listaItemsResumo">
                 <div class="col-12 item-carrinho resumo">
                   <div class="img-produto-resumo">
-                    <img src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" alt="">
+                    <img
+                      src="img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg"
+                      alt=""
+                    />
                   </div>
                   <div class="dados-produto">
                     <p class="title-produto-resumo">
@@ -513,9 +522,7 @@
                       <b>R$ 100,00</b>
                     </p>
                   </div>
-                  <p class="quantidade-produto-resumo">
-                    x <b>3</b>
-                  </p>
+                  <p class="quantidade-produto-resumo">x <b>3</b></p>
                 </div>
               </div>
             </div>
@@ -530,7 +537,7 @@
               </div>
               <div class="dados-produto">
                 <p class="texto-endereco">
-                  <b id="resumoEnedereco">Rua teste, 200,  bairro: teste</b>
+                  <b id="resumoEnedereco">Rua teste, 200, bairro: teste</b>
                 </p>
                 <p class="cidade-endereco" id="cidadeEndereco">
                   Cidade-SP / 000000-000
@@ -553,13 +560,29 @@
             </p>
             <p class="mb-0 texto-total">
               <span><b>Total: </b></span>
-              <span class="valor-total" id="lblValorTotal"><b>R$ 100,00</b></span>
+              <span class="valor-total" id="lblValorTotal"
+                ><b>R$ 100,00</b></span
+              >
             </p>
           </div>
-          <a href="#" class="btn btn-yellow float-right" id="btnEtapaPedido">Continuar</a>
-          <a href="#" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">Revisar pedido</a>
-          <a href="#" class="btn btn-yellow float-right hidden" id="btnEtapaResumo">Enviar pedido</a>
-          <a href="#" class="btn btn-white float-right hidden" id="btnVoltar">Voltar</a>
+          <a href="#" class="btn btn-yellow float-right" id="btnEtapaPedido"
+            >Continuar</a
+          >
+          <a
+            href="#"
+            class="btn btn-yellow float-right hidden"
+            id="btnEtapaEndereco"
+            >Revisar pedido</a
+          >
+          <a
+            href="#"
+            class="btn btn-yellow float-right hidden"
+            id="btnEtapaResumo"
+            >Enviar pedido</a
+          >
+          <a href="#" class="btn btn-white float-right hidden" id="btnVoltar"
+            >Voltar</a
+          >
         </div>
       </div>
     </div>
@@ -568,5 +591,7 @@
     <script src="js/modernizr-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
+    <script src="js/dados.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
